--- a/_posts/2023-10-1-jekyll.md
+++ b/_posts/2023-10-1-jekyll.md
@@ -7,7 +7,7 @@ tags: [ruby]
 
 ```Bash
 # 1.按照 用户名.github.io的格式创建GitHub仓库名
-
+<!--more-->
 # 2.搭建Jekyll环境
   # 安装RUBY
   官方下载地址：https://rubyinstaller.org/downloads/请选择WITH DEVKIT下的安装包
