--- a/_posts/2023-10-1-jekyll.md
+++ b/_posts/2023-10-1-jekyll.md
@@ -5,9 +5,30 @@ categories: [ruby]
 tags: [ruby]
 ---
 
+##### 通过GitHub Pages + Jekyll搭建一个属于自己的完全免费的个人博客
+
+Github Pages 是面向用户、组织和项目开放的公共静态页面搭建托管服务，站点可以被免费托管在 Github 上，你可以选择使用 Github Pages 默认提供的域名 github.io 或者自定义域名来发布站点。Github Pages 支持 自动利用 Jekyll 生成站点，也同样支持纯 HTML 文档
+使用 Github Pages 搭建博客有以下几个优点：
+
+- 完全免费，相较其他的同类产品，他能替你省下一笔服务费，节约下的钱可以让你买一些其他的会员服务；
+
+- 无须自己购买云服务进行搭建，只需按步骤一步步操作即可，即使你不懂他的技术细节；
+- 支持绑定自己的域名、使用免费的 HTTPS、自己 DIY 网站的主题、使用他人开发好的插件等等；
+- 提供流行的网页主题模板
+- 当完成搭建后，你只需要专注于文章创作就可以了，其他诸如环境搭建、系统维护、文件存储的事情一概不用操心，都由 GitHub 处理
+
+缺点也是有的：
+
+- 不支持动态内容，博客必须都是静态网页，一般会使用 Jekyll 来构建内容。
+- 博客不能被百度索引，因 Github 和百度有过节，所以 Github 就把百度给屏蔽了。
+- 仓库空间不大于1G
+- 每个月的流量不超过100G
+- 每小时更新不超过 10 次
+
+<!--more-->
+
 ```Bash
 # 1.按照 用户名.github.io的格式创建GitHub仓库名
-<!--more-->
 # 2.搭建Jekyll环境
   # 安装RUBY
   官方下载地址：https://rubyinstaller.org/downloads/请选择WITH DEVKIT下的安装包
