add:flask route

--- a/_posts/2023-10-21-redis.md
+++ b/_posts/2023-10-21-redis.md
@@ -7,15 +7,15 @@ tags: [redis]
 
 string（字符串）
 
-set key value ex seconds ------ 将字符串值value关联到key,并设定键的过期时间为seconds
-setnx key value ------- 只在key不存在的情况下，将键key的值设定为value
-setex key value ------- 如果键key已经存在， 那么setex命令将覆盖已有的值
-get key ------- 返回与键 key 相关联的字符串值
+set key value ex seconds ------ 将字符串值value关联到key,并设定键的过期时间为seconds<br/>
+setnx key value ------- 只在key不存在的情况下，将键key的值设定为value<br/>
+setex key value ------- 如果键key已经存在， 那么setex命令将覆盖已有的值<br/>
+get key ------- 返回与键 key 相关联的字符串值<br/>
 <!--more-->
-getset key value -------- 将键key的值设为value ， 并返回键key在被设置之前的旧值
-strlen key ----- 返回字符串的长度
-append key value ------ 将value追加到现在key的键值后面
-mset key1 value1 key2 value2 key3 value3 ------- 同时为多个键设定值
+getset key value -------- 将键key的值设为value ， 并返回键key在被设置之前的旧值<br/>
+strlen key ----- 返回字符串的长度<br/>
+append key value ------ 将value追加到现在key的键值后面<br/>
+mset key1 value1 key2 value2 key3 value3 ------- 同时为多个键设定值<br/>
 
 
 
