add:flask route

--- a/_posts/2023-10-21-redis.md
+++ b/_posts/2023-10-21-redis.md
@@ -20,45 +20,46 @@ mset key1 value1 key2 value2 key3 value3 ------- 同时为多个键设定值<br/
 
 
 hash：(哈希类型，保存对象的属性）
-hset student1 id 1 --- 设置学生ID
-hset student1 name zhangsan ---- 设置学生名字
-hset student1 sex male ---- 设置学生性别
-hmset student2 id 2 name lisi sex male ---- 同时设定多个属性
-hget student1 name --- 获取学生1姓名
-hmset student2 id name sex ---- 获取学生2的id name sex
-hvals student1 --- 获取学生1所有的属性值
-hgetall student1 ---- 获取学生1所有的属性值
+
+hset student1 id 1 --- 设置学生ID<br/>
+hset student1 name zhangsan ---- 设置学生名字<br/>
+hset student1 sex male ---- 设置学生性别<br/>
+hmset student2 id 2 name lisi sex male ---- 同时设定多个属性<br/>
+hget student1 name --- 获取学生1姓名<br/>
+hmset student2 id name sex ---- 获取学生2的id name sex<br/>
+hvals student1 --- 获取学生1所有的属性值<br/>
+hgetall student1 ---- 获取学生1所有的属性值<br/>
 
  
 
 list:（列表中可以有重复元素）
 
-lpush numbers 10 20 30 40 ---- 从左边放数据
-lrange numbers 0 -1 ---- 获取列表numbers中第一个到最后一个元素
-lpop numbers ---- 从左边开始取元素
-rpush ---- 从右边开始放元素
-rpop ----  从右边开始取元素
+lpush numbers 10 20 30 40 ---- 从左边放数据<br/>
+lrange numbers 0 -1 ---- 获取列表numbers中第一个到最后一个元素<br/>
+lpop numbers ---- 从左边开始取元素<br/>
+rpush ---- 从右边开始放元素<br/>
+rpop ----  从右边开始取元素<br/>
 
 
 set：（集合中不可以有重复元素）
 
-sadd --- 添加元素
-smembers --- 查看元素
-scard --- 查看集合中有几个元素
-sismember --- 是不是集合中的成员
-spop a 2 --- 随机取集合a中的两个元素
+sadd --- 添加元素<br/>
+smembers --- 查看元素<br/>
+scard --- 查看集合中有几个元素<br/>
+sismember --- 是不是集合中的成员<br/>
+spop a 2 --- 随机取集合a中的两个元素<br/>
 
 集合的交并补：
 
-sinter a b --- 求集合a和集合b的交集
-sunion a b --- 求集合a和集合b的并集
-sdiff a b ---  求集合a中有但是集合b中没有的元素
+sinter a b --- 求集合a和集合b的交集<br/>
+sunion a b --- 求集合a和集合b的并集<br/>
+sdiff a b ---  求集合a中有但是集合b中没有的元素<br/>
 
  
 
 有序集合：zset
 
-zadd paihangbang 30 zhangsan 90 lisi
-zrange --- 从小到大排列
-zrevrange --- 从大到小排列
-zincrby paihangbang 100 zhangsan  --- 给排行榜中的张三增加100张票
+zadd paihangbang 30 zhangsan 90 lisi<br/>
+zrange --- 从小到大排列<br/>
+zrevrange --- 从大到小排列<br/>
+zincrby paihangbang 100 zhangsan  --- 给排行榜中的张三增加100张票<br/>
